# drf-project

./: pyproject.toml  requirements.txt
config/: settings.py  urls.py
study/: models.py  serializers.py  urls.py  views.py
study/migrations/: 0001_initial.py  0002_alter_course_preview_img.py  0003_course_owner_lesson_owner.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py
